--- a/WebUploadUtility/Web.config
+++ b/WebUploadUtility/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <httpRuntime targetFramework="4.6.1" maxRequestLength ="1073741824"/>
   </system.web>
   <system.webServer>
     <handlers>
@@ -28,7 +28,13 @@
         type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation"
         preCondition="integratedMode,managedHandler"/>
     </modules>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824"></requestLimits>
+      </requestFiltering>
+    </security>
   </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
